fixed header spacing issue on right side of screen

--- a/less/index.less
+++ b/less/index.less
@@ -129,11 +129,17 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
+	
+}
+
+.container{
+	max-width: 100%;
+	border: 1px solid grey;
 }
 
 html, body {
-    height: 100%;
+	height: 100%;
 }
 
 header{
@@ -141,10 +147,10 @@ header{
 	justify-content: center;
 	flex-wrap: wrap;
 	height: 30%;
-	width: 100vw;
-	background-image: url('.\images\opportunityDocks.jpg'); /**********NOT WORKING****/
-	margin: 4%;
-	
+	width: 100%;
+	background-image: url('.\images\opportunityDocks.jpg'); /**********NOT WORKING****/ 
+	margin: 0%;
+	border: 1px solid blue;
 
 	.logo{
 		.giveMeSpace();
@@ -160,15 +166,29 @@ header{
 		width: 90%;
 	}
 
-	@media screen and (max-width:500px){
-			height: 30%;
-			margin: 4%;
-		/*****font-size changes were also NOT WORKING****/
-		
-	
-	}/******end of Media query***/
+	@media screen and (max-width:455px){
+		height: 40%;
+		margin: 4%;
 
 		
+	/*****font-size changes were also NOT WORKING****/
+	
+
+}/******end of Media query***/
+
+
+	@media screen and (max-width:287px){
+		height: 50%;
+		margin: 4%;
+
+		
+	/*****font-size changes were also NOT WORKING****/
+	
+
+}/******end of Media query***/
+
+
+
 
 
 
